--- a/transparentlogin.html
+++ b/transparentlogin.html
@@ -5,8 +5,8 @@
 <title>Transparent Login Form</title>
 	<link href="style.css" rel="stylesheet">
 </head>
-<h1> WelCome Guest !! Wish you a Good Day .  </h1>
-<h2>  This page belongs to Ajay Diwakar <h2>
+<h1 style="text-align:left"> WelCome Guest !! Wish you a Good Day .  </h1>
+<h2 style= "text-align:left">  This page belongs to Ajay Diwakar <h2>
 
 <body>
 	<div class="login-box">
